update types from backend requirements
